add a new images folder

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
         </div>
                    
         <div id="imagebox">
-            <img src="photo_of_me.jpg" alt="portfolio image">
+            <img src="images/photo_of_me.jpg" alt="portfolio image">
         </div>
         <div id="aboutbox">
             <h2>About...</h2>
@@ -23,48 +23,48 @@
         </div>
         <div id="lamode">
             <h2>La Mode</h2>
-            <img class="contentimg" src="lamode.png" alt="portfolio image">
+            <img class="contentimg" src="images/lamode.png" alt="portfolio image">
             <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit unde fugit consequatur, libero aliquam tempora, hic provident optio vero, harum commodi dicta mollitia. Quisquam, eius esse. Ad, illum! Dignissimos, cumque?</p>
             <h2>Technologies:</h2>
-            <img class="logos" src="php.png" alt="portfolio image">
-            <img class="logos" src="codeigniter.png" alt="portfolio image">
-            <img class="logos" src="jQuery.png" alt="portfolio image">
-            <img class="logos" src="ajax.png" alt="portfolio image">
-            <img class="logos" src="mysql.png" alt="portfolio image">
-            <img class="logos" src="html.png" alt="portfolio image">
-            <img class="logos" src="css.png" alt="portfolio image">
-            <img class="logos" src="bootstrap.png" alt="portfolio image">
+            <img class="logos" src="images/php.png" alt="portfolio image">
+            <img class="logos" src="images/codeigniter.png" alt="portfolio image">
+            <img class="logos" src="images/jQuery.png" alt="portfolio image">
+            <img class="logos" src="images/ajax.png" alt="portfolio image">
+            <img class="logos" src="images/mysql.png" alt="portfolio image">
+            <img class="logos" src="images/html.png" alt="portfolio image">
+            <img class="logos" src="images/css.png" alt="portfolio image">
+            <img class="logos" src="images/bootstrap.png" alt="portfolio image">
             <button>La Mode</button>
         </div>
         <div id="familybox">
             <h2>Family Contacts</h2>
-            <img class="contentimg"  src="familycontacts.png" alt="potfolio image">
+            <img class="contentimg"  src="images/familycontacts.png" alt="potfolio image">
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos veritatis, nobis ex accusamus ut, velit enim nisi expedita quam voluptatum et? Quos, perferendis? Porro placeat ullam cum possimus delectus ut.</p>
             <h2>Technologies:</h2>
-            <img class="logos" src="JavaScript.png" alt="portfolio image">
-            <img class="logos" src="mongodb.png" alt="portfolio image">
-            <img class="logos" src="expressjs.png" alt="portfolio image">
-            <img class="logos" src="angular.png" alt="portfolio image">
-            <img class="logos" src="nodejs.png" alt="portfolio image">
-            <img class="logos" src="html.png" alt="portfolio image">
-            <img class="logos" src="css.png" alt="portfolio image">
-            <img class="logos" src="socket.png" alt="portfolio image">
+            <img class="logos" src="images/JavaScript.png" alt="portfolio image">
+            <img class="logos" src="images/mongodb.png" alt="portfolio image">
+            <img class="logos" src="images/expressjs.png" alt="portfolio image">
+            <img class="logos" src="images/angular.png" alt="portfolio image">
+            <img class="logos" src="images/nodejs.png" alt="portfolio image">
+            <img class="logos" src="images/html.png" alt="portfolio image">
+            <img class="logos" src="images/css.png" alt="portfolio image">
+            <img class="logos" src="images/socket.png" alt="portfolio image">
             <button>Family Contacts</button>
         </div>
         <div id="five">
             <h2>fiveEleven</h2>
-            <img class="contentimg"  src="fiveEleven.png" alt="portfolio image">
+            <img class="contentimg"  src="images/fiveEleven.png" alt="portfolio image">
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos veritatis, nobis ex accusamus ut, velit enim nisi expedita quam voluptatum et? Quos, perferendis? Porro placeat ullam cum possimus delectus ut.</p>
             <h2>Technologies:</h2>
-            <img class="logos" src="python.png" alt="portfolio image">
-            <img class="logos" src="django.png" alt="portfolio image">
-            <img class="logos" src="d3.png" alt="portfolio image">
-            <img class="logos" src="angular.png" alt="portfolio image">
-            <img class="logos" src="sqlite.png" alt="portfolio image">
-            <img class="logos" src="html.png" alt="portfolio image">
-            <img class="logos" src="css.png" alt="portfolio image">
-            <img class="logos" src="javascript.png" alt="portfolio image">
-            <img class="logos" src="materialize.png" alt="portfolio image">
+            <img class="logos" src="images/python.png" alt="portfolio image">
+            <img class="logos" src="images/django.png" alt="portfolio image">
+            <img class="logos" src="images/d3.png" alt="portfolio image">
+            <img class="logos" src="images/angular.png" alt="portfolio image">
+            <img class="logos" src="images/sqlite.png" alt="portfolio image">
+            <img class="logos" src="images/html.png" alt="portfolio image">
+            <img class="logos" src="images/css.png" alt="portfolio image">
+            <img class="logos" src="images/javascript.png" alt="portfolio image">
+            <img class="logos" src="images/materialize.png" alt="portfolio image">
             <button>fiveEleven</button>
         </div>
         <div id="footer">
@@ -73,13 +73,13 @@
             <p>jdoe@gmails.com | 206-555-1212</p>
             
             <p>
-             <img class="social" src="github.png" alt="social media">
+             <img class="social" src="images/github.png" alt="social media">
              jeynedev
-             <img class="social" src="linkedin.png" alt="social media">
+             <img class="social" src="images/linkedin.png" alt="social media">
             jayne_doe
-             <img class="social" src="twitter.png" alt="social media">
+             <img class="social" src="images/twitter.png" alt="social media">
              jdtweets
-             <img class="social" src="codepen.png" alt="social media">
+             <img class="social" src="images/codepen.png" alt="social media">
              jeynedev
              </p>
         </div>
